--- a/agendacultural_com_ar/agenda/templates/agenda/index.html
+++ b/agendacultural_com_ar/agenda/templates/agenda/index.html
@@ -1,12 +1,36 @@
 {% extends "agenda/base.html" %}
 
-{# block title %}  {% endblock #}
-{% block body %}
-<div class="row">
-	<div class="twelve columns">
-		Cupcake ipsum dolor sit amet. Croissant cotton candy halvah ice cream chocolate lemon drops chocolate I love. Cupcake biscuit apple pie croissant danish bear claw brownie lemon drops ice cream. Apple pie faworki sweet chocolate bar tart pastry. Topping liquorice soufflé muffin. Muffin I love bonbon dessert chocolate cake lollipop powder sesame snaps. Chocolate cake caramels jelly marshmallow croissant. Faworki liquorice bonbon croissant toffee. Liquorice croissant ice cream chupa chups sweet roll halvah gingerbread. Cheesecake liquorice chocolate sesame snaps. Bonbon sweet roll gummi bears halvah powder faworki jelly beans oat cake chocolate cake. I love candy macaroon pastry. Toffee danish I love I love marshmallow chocolate bar chocolate bar brownie powder.
-		Danish jelly-o pudding I love. Wypas candy canes cake pie I love. Muffin I love candy pudding I love marzipan macaroon gingerbread. I love jelly beans chocolate bar tart cheesecake faworki jelly-o chupa chups donut. I love wafer pudding sweet halvah sweet chupa chups. Gummies sweet oat cake tart sugar plum carrot cake bear claw. Chocolate bar brownie carrot cake powder. Apple pie gingerbread candy canes bear claw oat cake cheesecake jelly pudding ice cream. Jelly beans I love muffin marzipan I love. Biscuit caramels lollipop jelly-o tiramisu cheesecake sweet roll macaroon icing. Jujubes pastry pastry candy macaroon tootsie roll. Wypas I love chocolate biscuit I love caramels faworki pastry. Apple pie jelly-o pudding dessert pastry jelly-o tiramisu carrot cake soufflé. Donut oat cake macaroon.
-		Icing dessert marzipan caramels. I love pudding carrot cake jujubes chocolate. Cake icing pie cupcake wafer jelly. Tart brownie bear claw. Muffin icing icing jelly-o icing bonbon. Marshmallow pudding apple pie dessert sesame snaps. I love sweet roll biscuit icing sweet. Jelly beans pudding I love I love I love jelly beans. Jelly jelly-o sweet croissant sweet candy. I love ice cream donut fruitcake oat cake bear claw. Applicake chupa chups gingerbread. Macaroon jelly-o chupa chups gummies dragée lollipop lollipop lollipop gingerbread. Cupcake brownie pastry sesame snaps I love oat cake cupcake tiramisu topping. Candy powder gummi bears tootsie roll tootsie roll cupcake tiramisu muffin gummies.
-	</div>
-</div>
-{% endblock %}
+{% block main_title %}
+    <h3>Agenda cultural (Título .twelve .columns)</h3>
+{% endblock main_title %}
+
+{% block sidebar %}
+    <p>Barra lateral</p>
+    <div class="row">
+        <div class="four columns">
+            <img src="http://placehold.it/32x32" />
+        </div>
+        <div class="nine columns">
+            This is a callout with three columns on the left (for the avatar) and nine columns here for the text. This row is inside the four column.
+        </div>
+    </div>
+{% endblock sidebar %}
+
+{% block contents %}
+    <h5>Contenido principal</h5>
+    <div class="row">
+        <div class="six columns">
+            <img src="http://placehold.it/200x200" />
+            <p>
+                Cupcake ipsum dolor sit amet. Croissant cotton candy halvah ice cream chocolate lemon drops chocolate I love. Cupcake biscuit apple pie croissant danish bear claw brownie lemon drops ice cream. Apple pie faworki sweet chocolate bar tart pastry. Topping liquorice soufflé muffin. Muffin I love bonbon dessert chocolate cake lollipop powder sesame snaps. Chocolate cake caramels jelly marshmallow croissant. Faworki liquorice bonbon croissant toffee. Liquorice croissant ice cream chupa chups sweet roll halvah gingerbread. Cheesecake liquorice chocolate sesame snaps. Bonbon sweet roll gummi bears halvah powder faworki jelly beans oat cake chocolate cake. I love candy macaroon pastry. Toffee danish I love I love marshmallow chocolate bar chocolate bar brownie powder.
+            </p>
+        </div>
+        <div class="six columns">
+            <img src="http://placehold.it/200x200" />
+            <p>
+                Danish jelly-o pudding I love. Wypas candy canes cake pie I love. Muffin I love candy pudding I love marzipan macaroon gingerbread. I love jelly beans chocolate bar tart cheesecake faworki jelly-o chupa chups donut. I love wafer pudding sweet halvah sweet chupa chups. Gummies sweet oat cake tart sugar plum carrot cake bear claw. Chocolate bar brownie carrot cake powder. Apple pie gingerbread candy canes bear claw oat cake cheesecake jelly pudding ice cream. Jelly beans I love muffin marzipan I love. Biscuit caramels lollipop jelly-o tiramisu cheesecake sweet roll macaroon icing. Jujubes pastry pastry candy macaroon tootsie roll. Wypas I love chocolate biscuit I love caramels faworki pastry. Apple pie jelly-o pudding dessert pastry jelly-o tiramisu carrot cake soufflé. Donut oat cake macaroon.
+                Icing dessert marzipan caramels. I love pudding carrot cake jujubes chocolate. Cake icing pie cupcake wafer jelly. Tart brownie bear claw. Muffin icing icing jelly-o icing bonbon. Marshmallow pudding apple pie dessert sesame snaps. I love sweet roll biscuit icing sweet. Jelly beans pudding I love I love I love jelly beans. Jelly jelly-o sweet croissant sweet candy. I love ice cream donut fruitcake oat cake bear claw. Applicake chupa chups gingerbread. Macaroon jelly-o chupa chups gummies dragée lollipop lollipop lollipop gingerbread. Cupcake brownie pastry sesame snaps I love oat cake cupcake tiramisu topping. Candy powder gummi bears tootsie roll tootsie roll cupcake tiramisu muffin gummies.
+            </p>
+        </div>
+    </div>
+{% endblock contents %}
