--- a/agendacultural_com_ar/agenda/templates/agenda/base.html
+++ b/agendacultural_com_ar/agenda/templates/agenda/base.html
@@ -1,112 +1,51 @@
-{% load i18n %}
-{% load staticfiles %}
-
 <!DOCTYPE html>
-<!--[if IE 8]> 				 <html class="no-js lt-ie9" lang="en" > <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="en" > <!--<![endif]-->
+{% load bootstrap_toolkit %}
+<html lang="es">
+<head>
+    <meta charset="utf-8">
+    <title>Agenda Cultural</title>
+    <meta name="description" content="">
+    <meta name="author" content="Dylan Verheul">
+    <!--    <style type="text/css">
+        body {
+            padding-top: 45px;
+        }
+    </style> -->
+    {% bootstrap_stylesheet_tag %}
+    {% bootstrap_stylesheet_tag "responsive" %}
+    <!--[if lt IE 9]>
+    <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+    {% bootstrap_javascript_tag %}
+    {% block extra_head %}
+    	<!-- Use this block to add thing in the header (such as scripts) -->
+    {% endblock %}
+</head>
 
-	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width" />
-		<title>{% block title %} Agenda cultural {% endblock %}</title>
-		<link rel="stylesheet" href="{% static 'css/foundation.css' %}" />
-		<link rel="stylesheet" href="{% static 'css/app_custom.css' %}" />
-		<script src="{% static 'js/vendor/custom.modernizr.js' %}"></script>
-	</head>
-	<body>
+<body>
 
-		<div class="row">
-			<div class="small-4 small-offset-8 columns">
-				{% block topbar %}
-					Acá va el login/logout, saludo y search.
-				{% endblock %}
-			</div>
-		</div>
 
-		<div class="row">
-		    <div class="twelve columns">
-			    {% block main_title %}
-					<!-- Acá va una imagen con el título de cada sección -->
-				{% endblock %}
-		    </div>
-		</div>
+<div class="container">
+    {% block topbar %}
+        <!-- Search box, login/welcome/logout, contact, etc. -->
+    {% endblock %}
 
-		<div class="row">
-			<div class="twelve columns">
-				{% block main_navbar %}
-					{% include 'agenda/top_navbar.html' %}
-				{% endblock %}
-			</div>
-		</div>
+    {% block body_header %}
+    {% endblock %}
 
-		<!--
-		{% if messages %}
-			<div class="alert alert-success">
-				{% for message in messages %}
-					{{ message }}
-				{% endfor %}
-			</div>
-		{% endif %}
-		-->
+    {% block main_navbar %}
+    {% endblock %}
 
-		<div class="row">
-			<div class="large-4 columns">
-				<div id="left_sidebar">
-					{% block sidebar %}
-						<!-- Acá la barra lateral -->
-					{% endblock %}
-				</div>
-			</div>
-			</div class="large-8 columns">
-				<div id="main_contents">
-					{% block contents %}
-						<!-- Main contents -->
-					{% endblock %}
-				</div>
-			</div>
-	    </div>
+    {% bootstrap_messages %}
 
-		<script>
-		document.write('<script src=' +
-		('__proto__' in {} ? "{% static 'js/vendor/zepto' %}" : "{% static 'js/vendor/jquery' %}") +
-		'.js><\/script>')
-		</script>
+	{% block container %}
+	{% endblock %}
 
-		<script src="{% static 'js/foundation.min.js' %}"></script>
-		<!--
+	{% block footer %}
+	{% endblock %}
 
-		<script src="js/foundation/foundation.js"></script>
+</div> <!-- container -->
 
-		<script src="js/foundation/foundation.alerts.js"></script>
-
-		<script src="js/foundation/foundation.clearing.js"></script>
-
-		<script src="js/foundation/foundation.cookie.js"></script>
-
-		<script src="js/foundation/foundation.dropdown.js"></script>
-
-		<script src="js/foundation/foundation.forms.js"></script>
-
-		<script src="js/foundation/foundation.joyride.js"></script>
-
-		<script src="js/foundation/foundation.magellan.js"></script>
-
-		<script src="js/foundation/foundation.orbit.js"></script>
-
-		<script src="js/foundation/foundation.placeholder.js"></script>
-
-		<script src="js/foundation/foundation.reveal.js"></script>
-
-		<script src="js/foundation/foundation.section.js"></script>
-
-		<script src="js/foundation/foundation.tooltips.js"></script>
-
-		<script src="js/foundation/foundation.topbar.js"></script>
-
-		-->
-
-		<script>
-		$(document).foundation();
-		</script>
-	</body>
+</body>
 </html>
