Experimenting with the frontend

--- a/frontend/js/templates/pages/home.html
+++ b/frontend/js/templates/pages/home.html
@@ -12,8 +12,11 @@
     <p><strong>Backbone.Marionette + RequireJS + Twitter Bootstrap</strong></p>
     <p>
         <img src="img/Octocat.png">
-        <a class="btn btn-lg btn-success" href="#" role="button">
-            Create an Event!
+        <a class="btn btn-lg btn-success" href="#page/event" role="button">
+            Events
+        </a>
+        <a class="btn btn-lg btn-success" href="#page/artists" role="button">
+            Artists
         </a>
     </p>
 </div>
